<resources>
    <string name="app_name">HotPlaceContactApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_name">list name</string>
    <string name="phoneMain">휴대전화</string>
    <string name="phone1">전화번호1</string>
    <string name="phone2">전화번호2</string>
    <string name="phone3">전화번호3</string>
    <string name="phone4">전화번호4</string>
    <string name="email">이메일</string>
    <string name="insta">인스타그램</string>
    <string name="website">웹사이트</string>
    <string name="memo">메모</string>
    <string name="edit">수정</string>
    <string name="favorite">즐겨찾기</string>
    <string name="favoriteNum">0</string>
    <string name="add_phone">+ 전화번호 추가</string>
    <string name="hint_name">이름</string>
    <string name="hint_phone">휴대전화 번호</string>
    <string name="hint_email">이메일 주소</string>
    <string name="hint_insta">인스타그램 주소</string>
    <string name="hint_website">웹사이트 주소</string>
    <string name="hint_memo">메모</string>
    <string name="quit">취소</string>
    <string name="save">저장</string>
    <string name="cD_imgPfp">user\'s profile image in a circle shape</string>
    <string name="cD_imgPlus">plus sign for pfp image adding button</string>
    <string name="cD_imgMinus">minus sign for removing additional inputed phone numbers</string>
    <string name="cD_imgBack">image of an angle pointing to the left as a back button</string>
    <string name="placeholder_name">가게 이름</string>
    <string name="palceholder_phone">가게 연락처 (00*-000*-0000)</string>
    <string name="placeholder_address">가게 주소</string>
    <string name="placeholder_insta">가게 인스타 아이디</string>
    <string name="btn_negative">취소</string>
    <string name="btn_positive">확인</string>
    <string name="valid_photo">사진을 등록해 주세요</string>
    <string name="valid_pass" />
    <string name="valid_name">가게명을 입력해주세요.</string>
    <string name="valid_phone">가게 연락처를 입력해주세요.</string>
    <string name="valid_phoneFormat">- 를 넣어 정확한 번호를 입력해주세요.</string>
    <string name="valid_address">가게 주소를 입력해주세요.</string>
    <string name="valid_insta">가게인스타 아이디를 입력해주세요.</string>
    <string name="valid_instaFormat">\@없이 정확한 인스타 아이디를 입력해주세요.</string>
    <string name="cD_ic_message">image of a speech bubble representing a message icon</string>
    <string name="cD_ic_phone">image of a phone handle representing a call icon</string>
</resources>