<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/addContact_cv_storePhoto"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="120dp"
        app:cardElevation="0dp"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/addContact_iv_storePhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/addcontact_ic_addpicture" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/addContact_tv_photoError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:paddingStart="4dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/addContact_et_storeName"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/placeholder_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addContact_tv_nameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/addContact_et_storePhone"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/palceholder_phone"
        android:inputType="phone"
        android:maxLength="15"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addContact_tv_phoneError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/addContact_et_storeAddress"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/placeholder_address"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addContact_tv_addressError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/addContact_et_storeInsta"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/placeholder_insta"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/addContact_tv_instaError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp" />
    <Button
        android:id="@+id/addContact_btn_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="알람확인버튼"/>

<!--    <com.google.android.material.chip.ChipGroup-->
<!--        android:id="@+id/addContact_chipGroup"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:singleSelection="true">-->

<!--        <com.google.android.material.chip.Chip-->
<!--            android:id="@+id/addContact_chip_off"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="4dp"-->
<!--            style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--            android:text="알림 OFF" />-->
<!--        <com.google.android.material.chip.Chip-->
<!--            android:id="@+id/addContact_chip_5m"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="4dp"-->
<!--            style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--            android:text="5분 후 알람" />-->

<!--        <com.google.android.material.chip.Chip-->
<!--            android:id="@+id/addContact_chip_30m"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="4dp"-->
<!--            style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--            android:text="30분 후 알람" />-->

<!--        <com.google.android.material.chip.Chip-->
<!--            android:id="@+id/addContact_chip_1h"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="4dp"-->
<!--            style="@style/Widget.MaterialComponents.Chip.Choice"-->
<!--            android:text="1시간 후 알람" />-->
<!--    </com.google.android.material.chip.ChipGroup>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/addContact_btn_negative"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_negative" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/addContact_btn_positive"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_positive" />


    </LinearLayout>


</LinearLayout>