<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPageFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scrollMyPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conlayMyPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linlayMyPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPfp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="40dp"
                    app:cardCornerRadius="1000dp">

                    <ImageView
                        android:id="@+id/imgPfp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background"
                        android:contentDescription="user's profile image in a circle shape"/>

                    <TextView
                        android:id="@+id/textPfp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="A"
                        android:textSize="100sp" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/linlayHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:text="김나도"
                        android:textSize="30sp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="2dp"
                        app:cardBackgroundColor="#38BDFA"
                        app:cardCornerRadius="1000dp">

                        <ImageView
                            android:id="@+id/imgMessage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:padding="10dp"
                            android:src="@drawable/ic_message"
                            android:contentDescription="image of a speech bubble representing a message icon"/>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardCall"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="2dp"
                        app:cardBackgroundColor="#42E848"
                        app:cardCornerRadius="1000dp">

                        <ImageView
                            android:id="@+id/imgCall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:padding="10dp"
                            android:src="@drawable/ic_call"
                            android:contentDescription="image of a phone handle representing a call icon"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayPhoneList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linlayPhoneMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <TextView
                            android:id="@+id/textPhoneLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="45dp"
                            android:layout_weight="1"
                            android:text="@string/phoneMain"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textPhoneNumber"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="45dp"
                            android:text="010-1111-1111"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textEmailLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textEmail"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="45dp"
                        android:text="email@address.com"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayInsta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textInstaLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_weight="1"
                        android:text="@string/insta"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textInsta"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="45dp"
                        android:text="instagram.com/asdf"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textWebsiteLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_weight="1"
                        android:text="@string/website"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textWebsite"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="45dp"
                        android:text="www.asdf.com"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayMemo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textMemoLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_weight="1"
                        android:text="@string/memo"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textMemo"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="45dp"
                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/edit"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="image of an angle pointing to the left as a back button"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>