<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditPageActivity">

    <ScrollView
        android:id="@+id/scrollMyPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conlayMyPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linlayMyPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardPfp"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginVertical="40dp"
                        app:cardCornerRadius="1000dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imgPfp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="user's profile image in a circle shape"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_launcher_background" />

                        <TextView
                            android:id="@+id/textPfp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="A"
                            android:textSize="100sp" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="40sp"
                        android:layout_height="40sp"
                        app:cardCornerRadius="1000dp"
                        app:layout_constraintBottom_toBottomOf="@id/cardPfp"
                        app:layout_constraintEnd_toEndOf="@id/cardPfp"
                        android:background="@color/white">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:src="@drawable/ic_add" />
                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/linlayHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/textName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2dp"
                        android:text="김나도"
                        android:textSize="30sp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="2dp"
                        app:cardBackgroundColor="#38BDFA"
                        app:cardCornerRadius="1000dp">

                        <ImageView
                            android:id="@+id/imgMessage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="image of a speech bubble representing a message icon"
                            android:padding="10dp"
                            android:src="@drawable/ic_message" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardCall"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="2dp"
                        app:cardBackgroundColor="#42E848"
                        app:cardCornerRadius="1000dp">

                        <ImageView
                            android:id="@+id/imgCall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="image of a phone handle representing a call icon"
                            android:padding="10dp"
                            android:src="@drawable/ic_call" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayPhoneList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linlayPhoneMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <TextView
                            android:id="@+id/textPhoneLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="45dp"
                            android:layout_weight="1"
                            android:text="@string/phoneMain"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/textPhoneNumber"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:hint="휴대전화번호"
                            android:inputType="phone"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imgMinus"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="25dp"
                            android:src="@drawable/ic_minus" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:text="+ 전화번호 추가"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textEmailLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_weight="1"
                        android:text="@string/email"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/textEmail"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="45dp"
                        android:hint="이메일 주소"
                        android:inputType="textWebEmailAddress"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayInsta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textInstaLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_weight="1"
                        android:text="@string/insta"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/textInsta"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="45dp"
                        android:hint="인스타그램 주소"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textWebsiteLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_weight="1"
                        android:text="@string/website"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/textWebsite"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="45dp"
                        android:hint="웹사이트 주소"
                        android:inputType="textWebEmailAddress"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlayMemo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/textMemoLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_weight="1"
                        android:text="@string/memo"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/textMemo"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="45dp"
                        android:hint="메모"
                        android:inputType="textMultiLine"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="image of an angle pointing to the left as a back button"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/linlaySaveOrQuit"
        app:layout_constraintTop_toBottomOf="@id/scrollMyPage"/>

    <LinearLayout
        android:id="@+id/linlaySaveOrQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewDivider">

        <TextView
            android:id="@+id/textExitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="취소"
            android:textSize="30sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="15dp"
            android:background="#A8A8A8" />

        <TextView
            android:id="@+id/textSaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="저장"
            android:textSize="30sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>